syntax = "proto3";

package queue;

option go_package = "queue/pb;pb"; // Ganti sesuai module go kamu

// ===== MESSAGE =====

message Queue {
  uint32 id = 1;
  uint32 user_id = 2;
  string user_name = 3;
  string user_role = 4;
  optional uint32 patient_id = 5;
  optional string patient_name = 6;
  uint32 doctor_id = 7;
  string doctor_name = 8;
  string doctor_specialization = 9;
  optional uint32 appointment_id = 10;
  string type = 11;
  int32 queue_number = 12;
  string start_from = 13;
  string status = 14;
  string created_at = 15;
}

message QueueIDRequest {
  uint32 id = 1;
}

message DoctorIDRequest {
  uint32 doctor_id = 1;
}

message CreateQueueRequest {
  Queue queue = 1;
}

message UpdateQueueRequest {
  Queue queue = 1;
}

message GenerateQueueRequest {
  uint32 doctor_id = 1;
  uint32 user_id = 2;
  string user_name = 3;
  string user_role = 4;
  optional uint32 appointment_id = 5;
  optional uint32 patient_id = 6;
  optional string patient_name = 7;
  string doctor_name = 8;
  string doctor_specialization = 9;
  string type = 10;
}

message QueueResponse {
  Queue queue = 1;
}

message QueueListResponse {
  repeated Queue queues = 1;
}

message EmptyResponse {}

// ===== SERVICE =====

service QueueService {
  rpc GetQueueByID(QueueIDRequest) returns (QueueResponse);
  rpc GetTodayQueuesByDoctor(DoctorIDRequest) returns (QueueListResponse);
  rpc CreateQueue(CreateQueueRequest) returns (EmptyResponse);
  rpc UpdateQueue(UpdateQueueRequest) returns (EmptyResponse);
  rpc GenerateNextQueue(GenerateQueueRequest) returns (QueueResponse);
}
