syntax = "proto3";

package consultation;

option go_package = "consultation-service/internal/payment/delivery/grpc/pb;pb";

import "google/protobuf/timestamp.proto";

import "google/protobuf/wrappers.proto";

message PaymentLog {
  string id = 1;
  string payment_id = 2;
  google.protobuf.StringValue response = 3; // Use StringValue to allow nullability
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message PaymentRequest {
  string consultation_id = 1;
  double amount = 2;
  string method = 3; // e.g., "credit_card", "bank_transfer"
}

message PaymentResponse {
  string id = 1;
  string consultation_id = 2;
  google.protobuf.Timestamp consultation_date = 3;
  string patient_id = 4;
  google.protobuf.StringValue patient_name = 5;
  string doctor_id = 6;
  google.protobuf.StringValue doctor_name = 7;
  double amount = 8;
  google.protobuf.StringValue method = 9;
  google.protobuf.StringValue gateway = 10;
  repeated PaymentLog payment_log = 11;
  google.protobuf.StringValue status = 12;
  google.protobuf.StringValue created_by = 13;
  google.protobuf.StringValue created_name = 14;
  google.protobuf.StringValue created_email = 15;
  google.protobuf.StringValue created_role = 16;
  google.protobuf.Timestamp created_at = 17;
  google.protobuf.StringValue updated_by = 18;
  google.protobuf.StringValue updated_name = 19;
  google.protobuf.StringValue updated_email = 20;
  google.protobuf.StringValue updated_role = 21;
  google.protobuf.Timestamp updated_at = 22;
}

message PaymentUpdateRequest {
  string id = 1; // unique identifier for the payment
  double amount = 2; // updated amount
  string status = 3; // updated status
}

// Buatkan message untuk menangani webhook baik dari payment gateway atau pihak ketiga lainnya, sertakan id unik sebagai identifier id dari pihak ketiga
message PaymentWebhookRequest {
  string id = 1; // unique identifier for the webhook
  string external_id = 2; // ID unik dari pihak ketiga
  string payment_id = 3; // ID pembayaran terkait
  string event_type = 4; // Jenis event dari webhook, misalnya "payment_success", "payment_failed"
  google.protobuf.StringValue payload = 5; // Payload JSON dari webhook
}

service PaymentService {
  rpc CreatePaymentGRPC(PaymentRequest) returns (PaymentResponse);
  rpc GetPaymentByIdGRPC(google.protobuf.StringValue) returns (PaymentResponse);
  rpc UpdatePaymentGRPC(PaymentUpdateRequest) returns (PaymentResponse);
  rpc HandlePaymentWebhookGRPC(PaymentWebhookRequest) returns (google.protobuf.StringValue);
}